# typeshed_client

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  flit.ini  pyproject.toml  setup.py  tox.ini  update_bundled.py
.github/workflows/: publish.yml  sync-typeshed.yml  test.yml
tests/: test.py
tests/typeshed/: README  VERSIONS  about.pyi  dunder_all.pyi  ifmypy.pyi  importabout.pyi  overloads.pyi  simple.pyi  starimportall.pyi  top_level_assert.pyi  tryexcept.pyi  tupleall.pyi  typealias.pyi
tests/typeshed/subdir/: sibling.pyi
typeshed_client/: __init__.py  finder.py  parser.py  resolver.py
typeshed_client/typeshed/: __future__.pyi  _bisect.pyi  _codecs.pyi  _csv.pyi  _curses.pyi  _dummy_thread.pyi  _dummy_threading.pyi  _osx_support.pyi  _py_abc.pyi  _sitebuiltins.pyi  _socket.pyi  _thread.pyi  _warnings.pyi  _weakref.pyi  _winapi.pyi  aifc.pyi  argparse.pyi  array.pyi  ast.pyi  asynchat.pyi  asyncore.pyi  audioop.pyi  base64.pyi  bdb.pyi  binascii.pyi  builtins.pyi  bz2.pyi  cProfile.pyi  calendar.pyi  cgi.pyi  cgitb.pyi  cmath.pyi  cmd.pyi  code.pyi  codecs.pyi  codeop.pyi  compileall.pyi  configparser.pyi  contextlib.pyi  contextvars.pyi  (+113 more)
typeshed_client/typeshed/@python2/: BaseHTTPServer.pyi  ConfigParser.pyi  SocketServer.pyi  UserDict.pyi  UserString.pyi  __future__.pyi  _bisect.pyi  _codecs.pyi  _collections.pyi  _csv.pyi  _curses.pyi  _dummy_threading.pyi  _functools.pyi  _heapq.pyi  _io.pyi  _osx_support.pyi  _socket.pyi  _sre.pyi  _struct.pyi  _thread.pyi  _warnings.pyi  _weakref.pyi  _winreg.pyi  abc.pyi  aifc.pyi  argparse.pyi  array.pyi  ast.pyi  asynchat.pyi  asyncore.pyi  audioop.pyi  base64.pyi  bdb.pyi  binascii.pyi  binhex.pyi  builtins.pyi  bz2.pyi  cProfile.pyi  calendar.pyi  cgi.pyi  (+112 more)
typeshed_client/typeshed/_typeshed/: __init__.pyi  wsgi.pyi  xml.pyi
typeshed_client/typeshed/asyncio/: __init__.pyi  base_events.pyi  base_futures.pyi  base_subprocess.pyi  coroutines.pyi  events.pyi  format_helpers.pyi  futures.pyi  locks.pyi  proactor_events.pyi  queues.pyi  sslproto.pyi  staggered.pyi  streams.pyi  subprocess.pyi  tasks.pyi  transports.pyi  trsock.pyi  unix_events.pyi  windows_events.pyi  windows_utils.pyi
typeshed_client/typeshed/collections/: __init__.pyi
typeshed_client/typeshed/ctypes/: __init__.pyi
typeshed_client/typeshed/dbm/: __init__.pyi  dumb.pyi  gnu.pyi  ndbm.pyi
typeshed_client/typeshed/distutils/: archive_util.pyi  ccompiler.pyi  cmd.pyi  core.pyi  dir_util.pyi  fancy_getopt.pyi  filelist.pyi  spawn.pyi  sysconfig.pyi  text_file.pyi  util.pyi
typeshed_client/typeshed/email/: __init__.pyi  charset.pyi  feedparser.pyi  generator.pyi  header.pyi  headerregistry.pyi  iterators.pyi  message.pyi  parser.pyi  utils.pyi
typeshed_client/typeshed/encodings/: utf_8.pyi
typeshed_client/typeshed/html/: parser.pyi
typeshed_client/typeshed/http/: client.pyi  cookiejar.pyi  cookies.pyi  server.pyi
typeshed_client/typeshed/importlib/: abc.pyi  machinery.pyi  metadata.pyi  resources.pyi  util.pyi
typeshed_client/typeshed/json/: decoder.pyi
typeshed_client/typeshed/lib2to3/: pytree.pyi  refactor.pyi
typeshed_client/typeshed/logging/: __init__.pyi  config.pyi  handlers.pyi
typeshed_client/typeshed/msilib/: __init__.pyi
typeshed_client/typeshed/multiprocessing/: __init__.pyi  connection.pyi  context.pyi  managers.pyi  pool.pyi  shared_memory.pyi  sharedctypes.pyi  spawn.pyi  synchronize.pyi
typeshed_client/typeshed/os/: __init__.pyi
typeshed_client/typeshed/pyexpat/: __init__.pyi
typeshed_client/typeshed/sqlite3/: dbapi2.pyi
(+116 files in other folders)
