[tool.black]
target_version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
skip-magic-trailing-comma = true
experimental-string-processing = true

force-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | typeshed_client/typeshed
)/
'''

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
